[package]
edition = "2021"
name = "lapcord"
version = "0.0.0"
resolver = "2"

[target.'cfg(target_os = "wasi")'.dependencies]
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.155"
uuid = "0.8.2"
lapce-plugin = { git = "https://github.com/lapce/lapce-plugin-rust.git" }


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

